// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselDots renders correctly - 3 dots, first active 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#FF9A6D",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
</View>
`;

exports[`CarouselDots renders correctly - 3 dots, second active 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#FF9A6D",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
</View>
`;

exports[`CarouselDots renders correctly - 3 dots, third active 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#202020",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#FF9A6D",
        },
      ]
    }
  />
</View>
`;

exports[`CarouselDots renders single dot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#FF9A6D",
        },
      ]
    }
  />
</View>
`;

exports[`CarouselDots renders with zero count 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
    }
  }
/>
`;
